--- a/.env.bk
+++ b/.env.bk
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:WhF5JjQuMyXEZmq9F55TQqkCj/wR+48UsuVllBt0pL0=
 APP_DEBUG=true
 APP_URL=http://localhost
-SESSION_DOMAIN=localhost:8000
+
 
 LOG_CHANNEL=stack
 
@@ -44,15 +44,15 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-
+#100006752597736 pass hn100795###
 ############## SECRET KEY ##########################################
 #FACEBOOK_APP_ID = 642423652634577
 #FACEBOOK_APP_SECRET = 91ffb713415e5e11f2a9f464a48c83b3
 #FACEBOOK_APP_CALLBACK_URL = http://localhost:8000/callback/facebook
 FACEBOOK_APP_ID = 1818488218257595
 FACEBOOK_APP_SECRET = 26e60297cb66425e00a0a6479b842536
-#FACEBOOK_APP_CALLBACK_URL = http://localhost:8000/callback/facebook
-FACEBOOK_APP_CALLBACK_URL = https://63a80dae.ngrok.io/callback/facebook
+FACEBOOK_APP_CALLBACK_URL = http://localhost:8000/callback/facebook
+#FACEBOOK_APP_CALLBACK_URL = https://ab914fa3.ngrok.io/callback/facebook
 
 GITHUB_APP_ID = 79f02d69b8205fe2282b
 GITHUB_APP_SECRET = c82b3d193f3bf22b590d13ce47bd1e9da148026c
