--- a/.env.bk
+++ b/.env.bk
@@ -58,9 +58,13 @@ GITHUB_APP_ID = 79f02d69b8205fe2282b
 GITHUB_APP_SECRET = c82b3d193f3bf22b590d13ce47bd1e9da148026c
 GITHUB_APP_CALLBACK_URL = http://localhost:8000/callback/github
 
-TWITTER_APP_ID = 9C83R9zQ2TOIEFW5k9hUbKks2
-TWITTER_APP_SECRET = DS5Si26a486MaqmBERsIcwJrjxVSYETm10KCeUhz5Tog6xBuyQ
+#TWITTER_APP_ID = 9C83R9zQ2TOIEFW5k9hUbKks2
+#TWITTER_APP_SECRET = DS5Si26a486MaqmBERsIcwJrjxVSYETm10KCeUhz5Tog6xBuyQ
+#TWITTER_APP_CALLBACK_URL = http://localhost:8000/callback/twitter
+TWITTER_APP_ID = 16165897
+TWITTER_APP_SECRET = hqipqmkax6lsXGHBvINHhgiqg7mvw2xGdUVyrS2cY0D8E6rARh
 TWITTER_APP_CALLBACK_URL = http://localhost:8000/callback/twitter
+#sonhaiuet.vp sonhaiUet@1705
 
 #Access key & token de lay data tu Twitter API:
 #Consumer Key (API Key):     RB3uxe6jLlFuX9FJzsodFkGi5
