login by instagram

--- a/.env.bk
+++ b/.env.bk
@@ -76,6 +76,10 @@ GOOGLE_APP_ID = 1077776948011-kgck4eo1bre8h985bln1ud4161m98no5.apps.googleuserco
 GOOGLE_APP_SECRET = PQDjqM6osZqvB50lrlHBuZlo
 GOOGLE_APP_CALLBACK_URL = http://localhost:8000/callback/google
 
-INSTAGRAM_APP_ID = a6c693d6ee434986a44513e58382be61
-INSTAGRAM_APP_SECRET = e1d5f92b1cb74cadb6724be0ff906db3
-INSTAGRAM_APP_CALLBACK_URL = http://localhost:8000/callback/instagram
+#INSTAGRAM_APP_ID = a6c693d6ee434986a44513e58382be61
+#INSTAGRAM_APP_SECRET = e1d5f92b1cb74cadb6724be0ff906db3
+#INSTAGRAM_APP_CALLBACK_URL = http://localhost:8000/callback/instagram
+
+INSTAGRAM_KEY=771df1ebb26a43fba11e76881c784385
+INSTAGRAM_SECRET=b4acabb55cbe4ff6946ea5273408eea9
+INSTAGRAM_REDIRECT_URI=http://localhost:8000/callback/instagram
