--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
-        "socialiteproviders/instagram": "^3.0"
+        "socialiteproviders/instagram": "^3.0",
+        "stevebauman/location": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
