--- a/.env
+++ b/.env
@@ -9,17 +9,17 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 #### local ####
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=influencerai
-#DB_USERNAME=root
-#DB_PASSWORD=
-#### server ####
-DB_HOST=35.236.66.95
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=influencer_ai
-DB_USERNAME=influencerai
-DB_PASSWORD="=AUS55(3RaMSOU&i"
+DB_DATABASE=influencerai
+DB_USERNAME=root
+DB_PASSWORD=
+#### server ####
+#DB_HOST=35.236.66.95
+#DB_PORT=3306
+#DB_DATABASE=influencer_ai
+#DB_USERNAME=influencerai
+#DB_PASSWORD="=AUS55(3RaMSOU&i"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
